Added News Button + Credits in README

--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
             </a>
           </div>
         </div>
+        <!-- See More News Button -->
+        <div class="newsButton">
+          <a class="seeMoreBtn" href="./pages/news.html" target="_blank">View More News</a>
+        </div>
       </div>
     </section>    
 
