--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Zomboid Website</title>
+    <title>Project Zomboid</title>
     <link rel="shortcut icon" href="./imgs/spiffoLogo.png" type="image/x-icon">
     <link rel="icon" href="./imgs/spiffoLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="stylesheet.css">
