--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!-- Main navBar Contents -->
       <nav class="navBar-center">
         <a href="#home">HOME</a>
-        <a href="/pages/game.html">GAME</a>
+        <a href="./pages/game.html">GAME</a>
         <a href="/pages/news.html">NEWS</a>
         <a href="https://theindiestone.com/forums/" target="_blank">FORUM</a>
         <a href="https://pzwiki.net/wiki/Project_Zomboid_Wiki" target="_blank">WIKI</a>
