Making Game Page + Fixed Files

--- a/pages/game.html
+++ b/pages/game.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Game</title>
+  <title>The Game - Project Zomboid</title>
   <link rel="shortcut icon" href="../imgs/spiffoLogo.png" type="image/x-icon">
   <link rel="icon" href="../imgs/spiffoLogo.png" type="image/x-icon">
   <link rel="stylesheet" href="../stylesheet.css">
@@ -30,22 +30,22 @@
       <!-- navBar Right for Social Icons -->
       <div class="navBar-right">
         <a href="https://www.reddit.com/r/projectzomboid/" target="_blank">
-          <img src="../imgs/redditIcon.svg" alt="Reddit">
+          <img src="../imgs/socialIcons/redditIcon.svg" alt="Reddit">
         </a>
         <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank">
-          <img src="../imgs/steamIcon.svg" alt="Steam">
+          <img src="../imgs/socialIcons/steamIcon.svg" alt="Steam">
         </a>
         <a href="https://www.facebook.com/profile.php?id=100063646957274" target="_blank">
-          <img src="../imgs/facebookIcon.svg" alt="Facebook">
+          <img src="../imgs/socialIcons/facebookIcon.svg" alt="Facebook">
         </a>
         <a href="https://discord.com/invite/0lGvMrCiUWbasJFh" target="_blank"> 
-          <img src="../imgs/discordIcon.svg" alt="Discord">
+          <img src="../imgs/socialIcons/discordIcon.svg" alt="Discord">
         </a>
         <a href="https://www.youtube.com/user/theindiestone" target="_blank">
-          <img src="../imgs/youtubeIcon.svg" alt="YouTube">
+          <img src="../imgs/socialIcons/youtubeIcon.svg" alt="YouTube">
         </a>
         <a href="https://x.com/theindiestone" target="_blank"> 
-          <img src="../imgs/twitterIcon.svg" alt="Twitter">
+          <img src="../imgs/socialIcons/twitterIcon.svg" alt="Twitter">
         </a>
       </div>    
     </header>
@@ -53,7 +53,7 @@
     <!-- Hero Banner for the Game Section -->
     <div class="gameHero">
       <div class="heroBanner">
-        <img src="../imgs/Game Banner.png" alt="Game Banner" class="heroImg">
+        <img src="../imgs/gameImgs/Game Banner.png" alt="Game Banner" class="heroImg">
         <h1 class="gameTitle">The Game Features</h1>
       </div>
     </div>
@@ -78,13 +78,50 @@
         <!-- Steam Button -->
         <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank" class="button steam">
           <span>BUY ON STEAM<span class="price">£16.75</span></span>
-          <img src="../imgs/steamIcon.svg" alt="Steam Icon">
+          <img src="../imgs/socialIcons/steamIcon.svg" alt="Steam Icon">
         </a>
         <!-- GoG Button -->
         <a href="https://www.gog.com/en/game/project_zomboid" target="_blank" class="button gog">
           <span>BUY ON GOG<span class="price">£16.75</span></span>
-          <img src="../imgs/gogIcon.svg" alt="GOG Icon">
+          <img src="../imgs/socialIcons/gogIcon.svg" alt="GOG Icon">
         </a>
+      </div>
+    </section>
+
+    <!-- Game Features -->
+    <section class="featuresGrid\Section">
+      <h2 class="featuresHeading">Current Game Features : B41</h2>
+      <div class="featuresGrid">
+        <div class="featuresCard">
+          <img src="../imgs/gameImgs/fleeTheHorde.jpg" alt="Flee The Horde">
+          <h3>Flee The Horde</h3>
+          <p>Thousands of ‘proper’ zeds roam the streets. Gunfire and combat could lead to a bite...</p>
+        </div>
+        <div class="featuresCard">
+          <img src="../imgs/gameImgs/sandboxSurvival.jpg" alt="Sandbox Survival">
+          <h3>Sandbox Survival</h3>
+          <p>Scavenge food, craft items, and construct buildings and defences in your fight against inevitable death.</p>
+        </div>
+        <div class="featuresCard">
+          <img src="../imgs/gameImgs/joinYourFriends.jpg" alt="Join Your Friends">
+          <h3>Join Your Friends</h3>
+          <p>Team up with similarly doomed buddies on user-created servers and in split-screen! Trust nobody</p>
+        </div>
+        <div class="featuresCard">
+          <img src="../imgs/gameImgs/epicExploration.jpg" alt="Epic Exploration">
+          <h3>Epic Exploration</h3>
+          <p>Explore the towns of isometric Kentucky in our vast, growing map. Where will you make your stand?</p>
+        </div>
+        <div class="featuresCard">
+          <img src="../imgs/gameImgs/learnToSurvive.jpg" alt="Learn To Survive">
+          <h3>Learn To Survive</h3>
+          <p>Develop skills through play, while fending off depression, boredom and infections.</p>
+        </div>
+        <div class="featuresCard">
+          <img src="../imgs/gameImgs/moddingSupport.jpg" alt="Modding Support">
+          <h3>Modding Support</h3>
+          <p>Powerful Lua mod support, with map and dev tools released to the community.</p>
+        </div>
       </div>
     </section>
   </body>
