--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
       <!-- navBar Right for Social Icons -->
       <div class="navBar-right">
         <a href="https://www.reddit.com/r/projectzomboid/" target="_blank">
-          <img src="./imgs/redditIcon.svg" alt="Reddit">
+          <img src="./imgs/socialIcons/redditIcon.svg" alt="Reddit">
         </a>
         <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank">
-          <img src="./imgs/steamIcon.svg" alt="Steam">
+          <img src="./imgs/socialIcons/steamIcon.svg" alt="Steam">
         </a>
         <a href="https://www.facebook.com/profile.php?id=100063646957274" target="_blank">
-          <img src="./imgs/facebookIcon.svg" alt="Facebook">
+          <img src="./imgs/socialIcons/facebookIcon.svg" alt="Facebook">
         </a>
         <a href="https://discord.com/invite/0lGvMrCiUWbasJFh" target="_blank"> 
-          <img src="./imgs/discordIcon.svg" alt="Discord">
+          <img src="./imgs/socialIcons/discordIcon.svg" alt="Discord">
         </a>
         <a href="https://www.youtube.com/user/theindiestone" target="_blank">
-          <img src="./imgs/youtubeIcon.svg" alt="YouTube">
+          <img src="./imgs/socialIcons/youtubeIcon.svg" alt="YouTube">
         </a>
         <a href="https://x.com/theindiestone" target="_blank"> 
-          <img src="./imgs/twitterIcon.svg" alt="Twitter">
+          <img src="./imgs/socialIcons/twitterIcon.svg" alt="Twitter">
         </a>
       </div>    
     </header>
@@ -67,12 +67,12 @@
           <!-- Steam Button -->
           <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank" class="button steam">
             <span>BUY ON STEAM<span class="price">£16.75</span></span>
-            <img src="./imgs/steamIcon.svg" alt="Steam Icon">
+            <img src="./imgs/socialIcons/steamIcon.svg" alt="Steam Icon">
           </a>
           <!-- GoG Button -->
           <a href="https://www.gog.com/en/game/project_zomboid" target="_blank" class="button gog">
             <span>BUY ON GOG<span class="price">£16.75</span></span>
-            <img src="./imgs/gogIcon.svg" alt="GOG Icon">
+            <img src="./imgs/socialIcons/gogIcon.svg" alt="GOG Icon">
           </a>
         </div>
       </div>
@@ -193,22 +193,22 @@
         <!-- Social Icons -->
         <div class="socialRow">
           <a href="https://www.reddit.com/r/projectzomboid/" target="_blank">
-            <img src="./imgs/redditIcon.svg" alt="Reddit">
+            <img src="./imgs/socialIcons/redditIcon.svg" alt="Reddit">
           </a>
           <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank">
-            <img src="./imgs/steamIcon.svg" alt="Steam">
+            <img src="./imgs/socialIcons/steamIcon.svg" alt="Steam">
           </a>
           <a href="https://www.facebook.com/profile.php?id=100063646957274" target="_blank">
-            <img src="./imgs/facebookIcon.svg" alt="Facebook">
+            <img src="./imgs/socialIcons/facebookIcon.svg" alt="Facebook">
           </a>
           <a href="https://discord.com/invite/0lGvMrCiUWbasJFh" target="_blank"> 
-            <img src="./imgs/discordIcon.svg" alt="Discord">
+            <img src="./imgs/socialIcons/discordIcon.svg" alt="Discord">
           </a>
           <a href="https://www.youtube.com/user/theindiestone" target="_blank">
-            <img src="./imgs/youtubeIcon.svg" alt="YouTube">
+            <img src="./imgs/socialIcons/youtubeIcon.svg" alt="YouTube">
           </a>
           <a href="https://x.com/theindiestone" target="_blank"> 
-            <img src="./imgs/twitterIcon.svg" alt="Twitter">
+            <img src="./imgs/socialIcons/twitterIcon.svg" alt="Twitter">
           </a>
         </div>
         <!-- Credits Section -->
