Fixed Home + Game + Starting News Page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Zomboid</title>
+    <title>Home - Project Zomboid</title>
     <link rel="shortcut icon" href="./imgs/spiffoLogo.png" type="image/x-icon">
     <link rel="icon" href="./imgs/spiffoLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="stylesheet.css">
@@ -20,7 +20,7 @@
       </div>
       <!-- Main navBar Contents -->
       <nav class="navBar-center">
-        <a href="#home">HOME</a>
+        <a href="#home" class="active" >HOME</a>
         <a href="./pages/game.html">GAME</a>
         <a href="/pages/news.html">NEWS</a>
         <a href="https://theindiestone.com/forums/" target="_blank">FORUM</a>
