Fixed Game Background

--- a/pages/game.html
+++ b/pages/game.html
@@ -145,17 +145,21 @@
       </div>
     </section>
     
-    <!-- How Its Released Section -->
+    <!-- How It's Released Section -->
     <section class="releaseSection">
-      <h2 class="featuresHeading">How It's released</h2>
-      <p class="sectionText">
-        Project Zomboid will be continually updated until we achieve the feature list we set out at the start of development.
-        <br><br>
-        The stable build can be found on Steam and GOG, but we often release Public Test Builds of upcoming updates and patches that are downloadable by opting into the ‘Unstable’ beta on Steam. (When possible these are also updated as betas to GOG).
-        <br><br>
-        Please be warned however that the unstable beta may well be buggy – these releases are our way of widening our tester group. For more information keep tabs on the PZ Updates section of our forum.
-      </p>
+      <div class="releaseOverlay"></div>
+      <div class="releaseContent">
+        <h2 class="featuresHeading">How It's Released</h2>
+        <p class="sectionText">
+          Project Zomboid will be continually updated until we achieve the feature list we set out at the start of development.
+          <br><br>
+          The stable build can be found on Steam and GOG, but we often release Public Test Builds of upcoming updates and patches that are downloadable by opting into the ‘Unstable’ beta on Steam. (When possible these are also updated as betas to GOG).
+          <br><br>
+          Please be warned however that the unstable beta may well be buggy – these releases are our way of widening our tester group. For more information keep tabs on the PZ Updates section of our forum.
+        </p>
+      </div>
     </section>
+
 
     <!-- Footer Section -->
     <footer>
