--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="navBar-center">
         <a href="#home" class="active" >HOME</a>
         <a href="./pages/game.html">GAME</a>
-        <a href="/pages/news.html">NEWS</a>
+        <a href="./pages/news.html">NEWS</a>
         <a href="https://theindiestone.com/forums/" target="_blank">FORUM</a>
         <a href="https://pzwiki.net/wiki/Project_Zomboid_Wiki" target="_blank">WIKI</a>
         <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank" class="buyNow">BUY NOW</a> 
