--- a/pages/game.html
+++ b/pages/game.html
@@ -21,8 +21,8 @@
       <!-- Main navBar Contents -->
       <nav class="navBar-center">
         <a href="../index.html">HOME</a>
-        <a href="/pages/game.html" class="active" >GAME</a>
-        <a href="/pages/news.html">NEWS</a>
+        <a href="./game.html" class="active" >GAME</a>
+        <a href="../pages/news.html">NEWS</a>
         <a href="https://theindiestone.com/forums/" target="_blank">FORUM</a>
         <a href="https://pzwiki.net/wiki/Project_Zomboid_Wiki" target="_blank">WIKI</a>
         <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank" class="buyNow">BUY NOW</a> 
