Added Comments + Making Reviews Page

--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
         <a href="#home" class="active" >HOME</a>
         <a href="./pages/game.html">GAME</a>
         <a href="./pages/news.html">NEWS</a>
+        <a href="./pages/reviews.html">REVIEWS</a>
         <a href="https://theindiestone.com/forums/" target="_blank">FORUM</a>
         <a href="https://pzwiki.net/wiki/Project_Zomboid_Wiki" target="_blank">WIKI</a>
         <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank" class="buyNow">BUY NOW</a> 
       </nav>
       <!-- navBar Right for Social Icons -->
       <div class="navBar-right">
-        <a href="https://www.reddit.com/r/projectzomboid/" target="_blank">
-          <img src="./imgs/socialIcons/redditIcon.svg" alt="Reddit">
-        </a>
         <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank">
           <img src="./imgs/socialIcons/steamIcon.svg" alt="Steam">
+        </a>
+        <a href="https://www.reddit.com/r/projectzomboid/" target="_blank">
+          <img src="./imgs/socialIcons/redditIcon.svg" alt="Reddit">
         </a>
         <a href="https://www.facebook.com/profile.php?id=100063646957274" target="_blank">
           <img src="./imgs/socialIcons/facebookIcon.svg" alt="Facebook">
@@ -192,11 +193,11 @@
         </div>
         <!-- Social Icons -->
         <div class="socialRow">
-          <a href="https://www.reddit.com/r/projectzomboid/" target="_blank">
-            <img src="./imgs/socialIcons/redditIcon.svg" alt="Reddit">
-          </a>
           <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank">
             <img src="./imgs/socialIcons/steamIcon.svg" alt="Steam">
+          </a>
+          <a href="https://www.reddit.com/r/projectzomboid/" target="_blank">
+            <img src="./imgs/socialIcons/redditIcon.svg" alt="Reddit">
           </a>
           <a href="https://www.facebook.com/profile.php?id=100063646957274" target="_blank">
             <img src="./imgs/socialIcons/facebookIcon.svg" alt="Facebook">
