--- a/pages/game.html
+++ b/pages/game.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Game - Project Zomboid</title>
+  <title>Game - Project Zomboid</title>
   <link rel="shortcut icon" href="../imgs/spiffoLogo.png" type="image/x-icon">
   <link rel="icon" href="../imgs/spiffoLogo.png" type="image/x-icon">
   <link rel="stylesheet" href="../stylesheet.css">
@@ -23,17 +23,18 @@
         <a href="../index.html">HOME</a>
         <a href="./game.html" class="active" >GAME</a>
         <a href="../pages/news.html">NEWS</a>
+        <a href="../pages/reviews.html">REVIEWS</a>
         <a href="https://theindiestone.com/forums/" target="_blank">FORUM</a>
         <a href="https://pzwiki.net/wiki/Project_Zomboid_Wiki" target="_blank">WIKI</a>
         <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank" class="buyNow">BUY NOW</a> 
       </nav>
       <!-- navBar Right for Social Icons -->
       <div class="navBar-right">
-        <a href="https://www.reddit.com/r/projectzomboid/" target="_blank">
-          <img src="../imgs/socialIcons/redditIcon.svg" alt="Reddit">
-        </a>
         <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank">
           <img src="../imgs/socialIcons/steamIcon.svg" alt="Steam">
+        </a>
+        <a href="https://www.reddit.com/r/projectzomboid/" target="_blank">
+          <img src="../imgs/socialIcons/redditIcon.svg" alt="Reddit">
         </a>
         <a href="https://www.facebook.com/profile.php?id=100063646957274" target="_blank">
           <img src="../imgs/socialIcons/facebookIcon.svg" alt="Facebook">
@@ -160,8 +161,6 @@
       </div>
     </section>
 
-
-    <!-- Footer Section -->
     <footer>
       <div class="footerContainer">
         <!-- Explore Column -->
@@ -169,14 +168,14 @@
           <h3>Explore</h3>
           <a href="#home">Homepage</a>
           <a href="https://theindiestone.com/forums/?ref=pz" target="_blank">Forum</a>
-          <a href="./pages/game.html">The Game</a>
+          <a href="./game.html">The Game</a>
           <a href="https://map.projectzomboid.com" target="_blank">Game Map</a>
           <a href="https://projectzomboid.com/blog/upcoming-features-b42/" target="_blank">Upcoming Features: B42</a>
         </div>
         <!-- Blog Column -->
         <div class="footerColumn">
           <h3>Blog</h3>
-          <a href="./pages/news.html">News</a>
+          <a href="./news.html">News</a>
           <a href="https://projectzomboid.com/blog/news/?filter&c=17&y=" target="_blank">Modding</a>
           <a href="https://projectzomboid.com/blog/news/?filter&c=16&y=" target="_blank">Community</a>
           <a href="https://projectzomboid.com/blog/about-us/" target="_blank">About Us</a>
@@ -205,11 +204,11 @@
         </div>
         <!-- Social Icons -->
         <div class="socialRow">
-          <a href="https://www.reddit.com/r/projectzomboid/" target="_blank">
-            <img src="../imgs/socialIcons/redditIcon.svg" alt="Reddit">
-          </a>
           <a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank">
             <img src="../imgs/socialIcons/steamIcon.svg" alt="Steam">
+          </a>
+          <a href="https://www.reddit.com/r/projectzomboid/" target="_blank">
+            <img src="../imgs/socialIcons/redditIcon.svg" alt="Reddit">
           </a>
           <a href="https://www.facebook.com/profile.php?id=100063646957274" target="_blank">
             <img src="../imgs/socialIcons/facebookIcon.svg" alt="Facebook">
