--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="../imgs/spiffoLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="../stylesheet.css">
 </head>
-    <body>
+  <body>
     <!-- The header has 3 divs because it contains the logo(left) main navBar contents(middle) and social icons(right) -->
     <!-- This div serves as the container for all those divs -->
     <header class="navBar">
@@ -50,5 +50,44 @@
           </a>
         </div>    
       </header>
-    </body>
+
+    <section class="reviewsSection">
+      <h1 class="reviewsTitle">Player Reviews</h1>
+      <div class="reviewsGrid">
+        <div class="reviewCard">
+          <h2 class="reviewTitle">Fantastic Hardcore Survival RPG Game</h2>
+          <div class="reviewRating">★★★★★</div>
+          <p class="reviewText">Project Zomboid is a fantastic hardcore survival RPG game for fans of Zombie games. The game may still be in early access but it is still currently be worked on. It has an incredible amount of things and interactions you can have on the world, and has some truly unforgiving survival elements. While the game does have it's bugs and issues, one of the greatest features is that the game is completely split screen couch co-op compatible. It is one of the few Steam games, ( and one of the few RPG games in general) that you can play whilst sitting next to your friend in the same room. I have fully reviewed the game on Set Ready Game, a gaming blog, but just felt the need to give the game the exposure it deserves. The Indie Stone are creating something amazing.</p>
+        </div>
+        <div class="reviewCard">
+          <h2 class="reviewTitle">Great Early Access Game</h2>
+          <div class="reviewRating">★★★★☆</div>
+          <p class="reviewText">A great early access game with new features coming out very regularly. A very fun game to explore and, basically, survive. Do not expect to live long as the game clearly states "This is how you died". The sandbox mode also allows great tweaking for different game style for each player. Don't let yourself get fooled by "unplayed" reviews and go download the demo after you watch a couple of videos of the game.</p>
+        </div>
+        <div class="reviewCard">
+          <h2 class="reviewTitle">Enough To Keep You Entertained</h2>
+          <div class="reviewRating">★★★★☆</div>
+          <p class="reviewText">Project Zomboid has had a checkered past at times, but it's come a long long way. It's still in Early Access after a number of years but make no mistake, it's feature full and fully playable. There's enough here to keep you entertained a long time and it's one of those atmospheric games that draws you in quite well. I would have given it a higher score only for the UI is a bit bad at times but the latest few patches have addressed it somewhat so it's going in the right direction. The devs do regular updates and are working on it still, so every month or so there's new stuff to check out, and the game is pretty configurable when it comes to starting conditions / types of zombies / loot rarity / character creation etc. I've been playing since build 27, and I think it's on build 33 now and much has been added to the game.</p>
+        </div>
+        <div class="reviewCard">
+          <h2 class="reviewTitle">One Of The Best Survival Games Out There</h2>
+          <div class="reviewRating">★★★★☆</div>
+          <p class="reviewText">One of the best survival games out there. It's a fantastic game as-is and definitely worth the price, and yet the potential of this game is vast. Don't be deterred by the dated graphics of project zomboid. What it lacks in graphic definition it easily makes up for in gameplay and content. In fact I consider the simple graphics a boon to the game, giving ease for developers and modders to add droves of great content. The game is immersive and exciting. Playing with my wife as we explored (ran for our lives) Muldraugh, KY, I found my heart racing, and palms sweating as we were both frantically yelling across the room to eachother to coordinate our survival. If you like survival, or anything zombie-related (not mutually exclusive), BUY THIS GAME!</p>
+        </div>
+        <div class="reviewCard">
+          <h2 class="reviewTitle">Endless Replayability</h2>
+          <div class="reviewRating">★★★★☆</div>
+          <p class="reviewText">The sandbox mode keeps pulling me back in. The updates and mod support are top notch. Just be ready for a steep learning curve!</p>
+        </div>
+        <div class="reviewCard">
+          <h2 class="reviewTitle">Endless Replayability</h2>
+          <div class="reviewRating">★★★★☆</div>
+          <p class="reviewText">The sandbox mode keeps pulling me back in. The updates and mod support are top notch. Just be ready for a steep learning curve!</p>          
+        </div>
+      </div>
+        <div class="moreReviewsBtn">
+          <a class="reviewsBtn" href="https://steamcommunity.com/app/108600/reviews/?browsefilter=toprated&snr=1_5_100010_" target="_blank">View More Reviews</a>
+        </div>
+    </section>
+  </body>
 </html>
