Finished Reviews Page + Added Music & Comment

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Project Zomboid</title>
-    <link rel="shortcut icon" href="./imgs/spiffoLogo.png" type="image/x-icon">
-    <link rel="icon" href="./imgs/spiffoLogo.png" type="image/x-icon">
-    <link rel="stylesheet" href="stylesheet.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - Project Zomboid</title>
+  <link rel="shortcut icon" href="./imgs/spiffoLogo.png" type="image/x-icon">
+  <link rel="icon" href="./imgs/spiffoLogo.png" type="image/x-icon">
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
   <body>
+    <!-- Plays Audio If Allowed in the browser -->
+    <audio autoplay loop hidden>
+      <source src="./audio/ProjectZomboidThemeSong.mp3" type="audio/mpeg">
+    </audio>
     <!-- The header has 3 divs because it contains the logo(left) main navBar contents(middle) and social icons(right) -->
     <!-- This div serves as the container for all those divs -->
     <header class="navBar">
