Added News Pages 2 and 3

--- a/pages/news2.html
+++ b/pages/news2.html
@@ -206,11 +206,11 @@
     
     <!-- Pages -->
     <div class="pagination">
-      <a href="#" class="prev">&laquo; Previous</a>
-      <a href="#" class="active">1</a>
-      <a href="../pages/news2.html">2</a>
+      <a href="../pages/news.html" class="prev">&laquo; Previous</a>
+      <a href="../pages/news.html">1</a>
+      <a href="../pages/news2.html"class="active">2</a>
       <a href="../pages/news3.html">3</a>
-      <a href="../pages/news2.html" class="next">Next &raquo;</a>
+      <a href="../pages/news3.html" class="next">Next &raquo;</a>
       </div>
     </section>
     
